 * RDS :db_security_groups should be an Array, not a String.
 * Use HmacSHA256 signatures instead of SHA1 (preferred by AWS and improves support for Eucalyptus)
 * added AWS::EC2::Base#get_password_data for GetPasswordData API (Windows instances)
 * Fix #26.  Raise an exception immediately if the response is a 5xx Server Error.

=== 0.9.16 2010-07-07
 * Less strict checking on which server endpoints you can pass in as an environment var.
 * Moved ec2sh script to awshell to better reflect the more comprehensive nature of the gem.
 * Better instructions on using awshell upon running
 * awshell now sets up handles for all of the various services we use, not just @ec2 (+ @as, @rds, @elb, @cw)
 * awshell prints out the various server endpoints that it will actually use in the shell (you can override with env vars).

=== 0.9.11 2010-04-23
 * RDS#create_db_instance : renamed misspelled :backend_retention_period option to :backup_retention_period.
 * Better handling of FixNum options in a few methods.
 * A few bug fixes.

=== 0.9.10 2010-03-26
 * Enhancements to EC2 register_image to handle registration based on EBS snapshots (jamespharaoh)

=== 0.9.9 2010-03-19
 * Bugfix in signing algorithm (wlach)

=== 0.9.7 2010-03-14
 * Added EC2 describe_subnets support (petitbon)

=== 0.9.0 2010-01-19
 * Added EC2 Spot Instance Request Support (nirvdrum)
 * Added EC2 describe_spot_price_history (tlossen)
 * Added ELB describe_instance_health method (rubysolo)

=== 0.7.4 2009-12-05
 * Initial support for new EBS AMI's
 * Updated EC2 API version
 * Added US West 1 Data Center to list of valid endpoints. (us-west-1.ec2.amazonaws.com)
 * Updated exceptions.rb to be in sync with latest documented exceptions.
 * Updated #run_instances to support EBS AMI's and sync with latest options.
 * Added new #stop_instances and #start_instances methods.
 * Added new #create_image to allow bundling of a running instance to an EBS backed AMI.